# img_parser

./: README.md  main.py  pyproject.toml
services/: __init__.py  parser_services.py
settings/: __init__.py  settings.py
