[tool.poetry]
name = "img-parse"
version = "0.1.0"
description = "\"Парсер картинок\""
authors = ["emildzy <e.aglya@yandex.ru>"]
readme = "README.md"
packages = [{include = "img_parse"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
